# literature_visual

./: pyproject.toml
src/: requirements.txt
src/data/: cdl.academic.csv  ifactor.csv  y_data.csv
src/data/country/: 中国.csv
src/data/全部论文09-11_csv/: savedrecs (1).csv  savedrecs (10).csv  savedrecs (11).csv  savedrecs (12).csv  savedrecs (13).csv  savedrecs (14).csv  savedrecs (15).csv  savedrecs (16).csv  savedrecs (17).csv  savedrecs (18).csv  savedrecs (19).csv  savedrecs (2).csv  savedrecs (20).csv  savedrecs (21).csv  savedrecs (22).csv  savedrecs (23).csv  savedrecs (24).csv  savedrecs (25).csv  savedrecs (26).csv  savedrecs (27).csv  savedrecs (28).csv  savedrecs (29).csv  savedrecs (3).csv  savedrecs (30).csv  savedrecs (31).csv  savedrecs (32).csv  savedrecs (33).csv  savedrecs (34).csv  savedrecs (35).csv  savedrecs (36).csv  savedrecs (37).csv  savedrecs (38).csv  (+48 more)
src/literature_visual/: author_cited.py  database_process.py  get_altmetric.py  get_name_country.py  main.py  oa.py  run_shap.py  save_source.py  source_data_transf.py  split_funding.py  test.py  xls2csv.py
src/result/: All_AAS_metrics.csv  All_F_academic_metrics.csv  All_F_social_metrics.csv  All_Times Cited, All Databases_metrics.csv  social_0328.csv  中国_AAS_metrics.csv  中国_F_academic_metrics.csv  中国_F_social_metrics.csv  中国_Times Cited, All Databases_metrics.csv  美国_AAS_metrics.csv  美国_F_academic_metrics.csv  美国_F_social_metrics.csv  美国_Times Cited, All Databases_metrics.csv  英国_AAS_metrics.csv  英国_F_academic_metrics.csv  英国_F_social_metrics.csv  英国_Times Cited, All Databases_metrics.csv
(+242 files in other folders)
